implement signing with MyAlgoConnect

--- a/server/views/quicksig.handlebars
+++ b/server/views/quicksig.handlebars
@@ -1,4 +1,8 @@
 <h1>QuickSig</h1>
+<button type="button" id="my-algo-connect" class="btn" disabled>Connect To MyAlgo Connect</button>
+<br>
+<button type="button" id="my-algo-sign" class="btn" disabled>Sign With MyAlgo Connect</button>
+
 <h2>Verification</h2>
 <table class="table table-striped">
     <tr>
